--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
             "email": "thomas.hiron@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "twig/twig": "^2.0"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "src"
